--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_busq_inc">BusqInc</string>
+    <string name="title_activity_bisecc">Bisecc</string>
+    <string name="title_activity_regla_fal">ReglaFal</string>
+    <string name="title_activity_punto_fijo">PuntoFijo</string>
+    <string name="title_activity_newto">Newto</string>
+    <string name="title_activity_secant">Secant</string>
+    <string name="title_activity_raices_mult">RaicesMult</string>
 </resources>
