"Dejame vivir mi vida Yo no soy malo con nadie Si soy borracho, Si soy un perdido Si soy mujeriego, Si soy un badido Yo vago en el mundo, yo soy vagabundo"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="toltextPfijo">valor delta</string>
     <string name="iterviewPfijo">Iteraciones</string>
     <string name="itertextPfijo"># iteraciones</string>
+    <string name="title_activity_integracion">Integracion</string>
 </resources>
